# ssps-discord-bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE-MIT.txt  Makefile  README.md  docker-compose.yaml  release.Dockerfile
.github/: CODEOWNERS
.github/workflows/: cd.yaml  ci.yaml
ansible/: deploy.yaml  inventory.yaml  secrets.yaml  vars.yaml
ansible/inventory/: hosts.yaml
ansible/inventory/group_vars/all/: config.yaml  oauth.yaml  sentry.yaml  vault.yaml
ansible/inventory/group_vars/production/: config.yaml  database.yaml  oauth.yaml  vault.yaml
ansible/inventory/group_vars/testing_alpha/: config.yaml  database.yaml  oauth.yaml  vault.yaml
ansible/roles/database/defaults/: main.yaml
ansible/roles/database/tasks/: main.yaml
ansible/roles/ssps-discord-bot/tasks/: main.yaml
ansible/roles/ssps-discord-bot/templates/: .env.j2
application/: Cargo.toml
application-ports/: Cargo.toml
application-ports/src/: authentication.rs  information_channel.rs  lib.rs  periodic_scheduling_handler.rs  role_sync_job_handler.rs  user.rs  user_info_sync_job_handler.rs
application/src/: authentication.rs  information_channel.rs  lib.rs  periodic_scheduling_handler.rs  role_sync_job_handler.rs  user.rs  user_info_sync_job_handler.rs
bootstrap/: Cargo.toml
bootstrap/src/: args.rs  locator.rs  main.rs
bootstrap/src/bot/commands/: mod.rs  update_information.rs
bootstrap/src/command/: migrate.rs  mod.rs  serve.rs
domain/: Cargo.toml
domain-shared/: Cargo.toml
domain-shared/src/: authentication.rs  discord.rs  lib.rs
domain/resources/: announcement-guidelines.md  discord-bot.md  school-management.md  verification.md
domain/src/: information_channel.rs  lib.rs  resources.rs  roles.rs  user_role_service.rs
domain/src/authentication/: archived_authenticated_user.rs  authenticated_user.rs  mod.rs  user_authentication_request.rs
domain/src/class/: class_group.rs  class_id.rs  mod.rs
domain/src/jobs/: mod.rs  role_sync_job.rs  user_info_sync_job.rs
domain/src/ports/: mod.rs
domain/src/ports/discord/: create_action_row.rs  create_attachment.rs  create_button.rs  create_message.rs  mod.rs  role.rs  role_diff.rs
domain/src/ports/oauth/: mod.rs
infrastructure/: Cargo.toml
infrastructure/migrations/: 20250404190830_add_user_authentication_requests_table.sql  20250404191928_add_authenticated_users_table.sql  20250410112825_add_expiration_col_to_authenticated_users.sql  20250410120622_add_name_and_email_to_authenticated_users.sql  20250414151750_make_name_and_email_not_nullable.sql  20250415071251_add_unique_index_to_email.sql  20250905125231_add_archived_authenticated_users_table.sql  20250915232834_add_role_sync_requested_table.sql  20250925154518_make_class_id_optional.sql  20250925161517_add_confirmed_at_to_auth_requests.sql  20250925171446_add_user_info_sync_requested_table.sql
infrastructure/src/: lib.rs
infrastructure/src/authentication/: archived_authenticated_user.rs  authenticated_user.rs  mod.rs  user_authentication_request.rs
infrastructure/src/database/: mod.rs
infrastructure/src/discord/: channel_id.rs  create_attachment.rs  create_button.rs  create_message.rs  mod.rs  role_id.rs  user_id.rs
infrastructure/src/jobs/: mod.rs  role_sync_job_repository.rs  user_info_sync_job_repository.rs
infrastructure/src/oauth/: authentication_link.rs  csrf_token.rs  mod.rs
presentation/: Cargo.toml
presentation/src/: application_ports.rs  lib.rs
presentation/src/api/: mod.rs  oauth.rs
presentation/src/discord/: mod.rs
presentation/src/discord/buttons/: mod.rs  verify.rs
presentation/src/discord/commands/: has_role_without_verified.rs  mod.rs  not_verified_users.rs  refresh_user_roles.rs  send_msg_to_not_verified.rs  update_information.rs  user_info.rs  verified_user_stats.rs  verify.rs
presentation/src/discord/response/: authentication_link.rs  mod.rs  unavailable.rs
presentation/src/worker/: mod.rs  periodic_scheduling_worker.rs  role_sync_job.rs  user_info_sync_job.rs
resources/: contacts.md  rules.md  social-networks.md
src/: main.rs  resources.rs
src/bot/: mod.rs
src/commands/: mod.rs  modal.rs  ping.rs
