[package]
authors = [
    "Richard Tichý <tichy@artify.zone>",
]
name = "ssps-discord-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssps-discord-bot"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
dotenv = "0.15.0"
secrecy = "0.8.0"
serenity = { version = "0.12.1", features = ["full"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
