[package]
name = "application"
edition = "2021"

[dependencies]
application-ports = { path = "../application-ports" }
domain = { path = "../domain" }
domain-shared = { path = "../domain-shared" }

async-trait = "0.1"
chrono = "0.4"
tracing = "0.1"
tokio = { version = "1.47", features = ["full"] }

[dev-dependencies]
domain = { path = "../domain", features = ["mock"] }

mockall = "0.13"
