[package]
name = "presentation"
edition = "2021"

[dependencies]
application-ports = { path = "../application-ports" }
domain = { path = "../domain" }
domain-shared = { path = "../domain-shared" }

axum = { version = "0.8.1", features = ["json", "tokio", "macros"] }
poise = "0.6.1"
serde = { version = "1.0.203", features = ["derive"] }
tokio = "1.43.0"
