[package]
name = "presentation"
edition = "2021"

[dependencies]
application-ports = { path = "../application-ports" }
domain = { path = "../domain" }
domain-shared = { path = "../domain-shared" }

axum = { version = "0.8", features = ["json", "tokio", "macros"] }
poise = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.43"
tracing = "0.1"
